feat: Add Linux packaging and standalone executable support
- Add PyInstaller build scripts (build.sh, install.sh, uninstall.sh, release.sh)
- Support system-wide installation (/usr/local/bin, /etc, /var/lib)
- Update config.py to check /etc/clawdbot-smtp/config.json
- Update utils.py to support system template directory
- Add Chinese documentation (README_CN.md)
- Update main README with Linux installation guide
- Add packaging to .gitignore
- Make install/uninstall scripts executable
- Simplify installation for Linux users

Users can now install with: curl -sSL https://.../install.sh | bash

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,16 @@ wheels/
 .installed.cfg
 *.egg
 
+# PyInstaller
+*.spec
+build/
+dist/
+
+# Release packages
+release/
+*.tar.gz
+*.sha256
+
 # IDEs
 .vscode/
 .idea/
